--- a/gameOfThrones.ipynb
+++ b/gameOfThrones.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM4U84KzqWhFw5qwgJJPNm/",
+      "authorship_tag": "ABX9TyO0ftiwG+q+vTvBQwVq6tjn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,8 +62,7 @@
         "\n",
         "for x in targaryen_house[\"swornMembers\"]:\n",
         "  response = requests.get(x)\n",
-        "  targaryen.append(response.json())\n",
-        "print(targaryen)"
+        "  targaryen.append(response.json())"
       ],
       "metadata": {
         "colab": {
@@ -97,9 +97,7 @@
         "targaryens = []\n",
         "\n",
         "for x in targaryen:\n",
-        "  targaryens.append(select_data(x))\n",
-        "\n",
-        "print(targaryens)"
+        "  targaryens.append(select_data(x))"
       ],
       "metadata": {
         "colab": {
