--- a/gameOfThrones.ipynb
+++ b/gameOfThrones.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0ftiwG+q+vTvBQwVq6tjn",
+      "authorship_tag": "ABX9TyMyta3R/RLyAvWag3BXiaoL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,14 @@
         "import requests\n",
         "import json\n",
         "import csv\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from numpy import nan\n",
+        "import seaborn as sns"
       ],
       "metadata": {
         "id": "FgmA003iGDRz"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -149,61 +151,135 @@
     {
       "cell_type": "code",
       "source": [
-        "df.head(10)"
+        "df.isna().sum()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "xkn0D7mBRh-w",
-        "outputId": "ba1656ab-277e-4173-98f5-24c53a15f452"
+        "outputId": "6b66d8b2-3fbf-4771-cab9-99b096518ea6"
       },
-      "execution_count": 24,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "               name  gender   culture                                 born  \\\n",
-              "0    Addam Velaryon    Male  Valyrian                   In 114 AC, at Hull   \n",
-              "1   Aegon Targaryen    Male  Valyrian  In 281 AC or 282 AC, at Dragonstone   \n",
-              "2   Aegon Targaryen    Male  Valyrian                             In 26 AC   \n",
-              "3   Aegon Targaryen    Male  Valyrian                                  NaN   \n",
-              "4   Aegon Targaryen    Male  Valyrian        In or between 50 AC and 59 AC   \n",
-              "5   Aelinor Penrose  Female  Valyrian                                  NaN   \n",
-              "6       Aemma Arryn  Female       NaN                             In 82 AC   \n",
-              "7  Aemond Targaryen    Male  Valyrian                            In 110 AC   \n",
-              "8  Aerion Targaryen    Male  Valyrian      In or between 191 AC and 194 AC   \n",
-              "9  Aerion Targaryen    Male  Valyrian                       At Dragonstone   \n",
+              "name        0\n",
+              "gender      0\n",
+              "culture    36\n",
+              "born       26\n",
+              "died       49\n",
+              "titles      0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"born\"].nunique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_a-lkKOVWXKe",
+        "outputId": "0e53f50a-f895-4ce0-bdac-d5ac5555e4a4"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "71"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"titles\"] = df['titles'].replace(\"['']\", nan)"
+      ],
+      "metadata": {
+        "id": "Xx7vHUMwYrNw"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "xnWFG6O4ZR1w",
+        "outputId": "bf336aee-ccde-4d74-c833-032b93552387"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                  name  gender       culture  \\\n",
+              "0       Addam Velaryon    Male      Valyrian   \n",
+              "1      Aegon Targaryen    Male      Valyrian   \n",
+              "2      Aegon Targaryen    Male      Valyrian   \n",
+              "3      Aegon Targaryen    Male      Valyrian   \n",
+              "4      Aegon Targaryen    Male      Valyrian   \n",
+              "..                 ...     ...           ...   \n",
+              "96           Tal Toraq    Male  Summer Isles   \n",
+              "97   Visenya Targaryen  Female      Valyrian   \n",
+              "98                Wate    Male           NaN   \n",
+              "99              Yandry    Male           NaN   \n",
+              "100             Yorkel    Male           NaN   \n",
               "\n",
-              "                                        died  \\\n",
-              "0                    In 130 AC, at Tumbleton   \n",
-              "1  In 283 AC (Supposedly), at King's Landing   \n",
-              "2                      In 43 AC, at Gods Eye   \n",
-              "3                                        NaN   \n",
-              "4                                        NaN   \n",
-              "5                                        NaN   \n",
-              "6                                  In 105 AC   \n",
-              "7                 In 130 AC, at the Gods Eye   \n",
-              "8                                  In 232 AC   \n",
-              "9                             At Dragonstone   \n",
+              "                                    born  \\\n",
+              "0                     In 114 AC, at Hull   \n",
+              "1    In 281 AC or 282 AC, at Dragonstone   \n",
+              "2                               In 26 AC   \n",
+              "3                                    NaN   \n",
+              "4          In or between 50 AC and 59 AC   \n",
+              "..                                   ...   \n",
+              "96                                   NaN   \n",
+              "97       In 28BC or 29BC, at Dragonstone   \n",
+              "98                                   NaN   \n",
+              "99                                   NaN   \n",
+              "100                                  NaN   \n",
               "\n",
-              "                                              titles  \n",
-              "0                                            ['Ser']  \n",
-              "1                                               ['']  \n",
-              "2                                         ['Prince']  \n",
-              "3                                         ['Prince']  \n",
-              "4                                         ['Prince']  \n",
-              "5                                          ['Queen']  \n",
-              "6                                          ['Queen']  \n",
-              "7  ['Prince', 'Protector of the Realm', 'Prince R...  \n",
-              "8                                         ['Prince']  \n",
-              "9                            ['Lord of Dragonstone']  "
+              "                                          died                      titles  \n",
+              "0                      In 130 AC, at Tumbleton                     ['Ser']  \n",
+              "1    In 283 AC (Supposedly), at King's Landing                         NaN  \n",
+              "2                        In 43 AC, at Gods Eye                  ['Prince']  \n",
+              "3                                          NaN                  ['Prince']  \n",
+              "4                                          NaN                  ['Prince']  \n",
+              "..                                         ...                         ...  \n",
+              "96                                         NaN                         NaN  \n",
+              "97                                    In 44 AC  ['Queen', 'Dowager Queen']  \n",
+              "98                                         NaN                         NaN  \n",
+              "99                                         NaN                         NaN  \n",
+              "100                                        NaN                         NaN  \n",
+              "\n",
+              "[101 rows x 6 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f54d8dc0-3794-4acf-9f3a-40ac4c1838ed\">\n",
+              "  <div id=\"df-1ce938fb-52ea-4c2d-bffe-1a4d9f2a25a6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -248,7 +324,7 @@
               "      <td>Valyrian</td>\n",
               "      <td>In 281 AC or 282 AC, at Dragonstone</td>\n",
               "      <td>In 283 AC (Supposedly), at King's Landing</td>\n",
-              "      <td>['']</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -278,54 +354,64 @@
               "      <td>['Prince']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>Aelinor Penrose</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>Tal Toraq</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Summer Isles</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>Visenya Targaryen</td>\n",
               "      <td>Female</td>\n",
               "      <td>Valyrian</td>\n",
+              "      <td>In 28BC or 29BC, at Dragonstone</td>\n",
+              "      <td>In 44 AC</td>\n",
+              "      <td>['Queen', 'Dowager Queen']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>Wate</td>\n",
+              "      <td>Male</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>['Queen']</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>Aemma Arryn</td>\n",
-              "      <td>Female</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>In 82 AC</td>\n",
-              "      <td>In 105 AC</td>\n",
-              "      <td>['Queen']</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>Aemond Targaryen</td>\n",
+              "      <th>99</th>\n",
+              "      <td>Yandry</td>\n",
               "      <td>Male</td>\n",
-              "      <td>Valyrian</td>\n",
-              "      <td>In 110 AC</td>\n",
-              "      <td>In 130 AC, at the Gods Eye</td>\n",
-              "      <td>['Prince', 'Protector of the Realm', 'Prince R...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>Aerion Targaryen</td>\n",
+              "      <th>100</th>\n",
+              "      <td>Yorkel</td>\n",
               "      <td>Male</td>\n",
-              "      <td>Valyrian</td>\n",
-              "      <td>In or between 191 AC and 194 AC</td>\n",
-              "      <td>In 232 AC</td>\n",
-              "      <td>['Prince']</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>Aerion Targaryen</td>\n",
-              "      <td>Male</td>\n",
-              "      <td>Valyrian</td>\n",
-              "      <td>At Dragonstone</td>\n",
-              "      <td>At Dragonstone</td>\n",
-              "      <td>['Lord of Dragonstone']</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>101 rows × 6 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f54d8dc0-3794-4acf-9f3a-40ac4c1838ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ce938fb-52ea-4c2d-bffe-1a4d9f2a25a6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -376,12 +462,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f54d8dc0-3794-4acf-9f3a-40ac4c1838ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-1ce938fb-52ea-4c2d-bffe-1a4d9f2a25a6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f54d8dc0-3794-4acf-9f3a-40ac4c1838ed');\n",
+              "          const element = document.querySelector('#df-1ce938fb-52ea-4c2d-bffe-1a4d9f2a25a6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -404,7 +490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 38
         }
       ]
     },
@@ -412,7 +498,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_a-lkKOVWXKe"
+        "id": "W9vcC58raJPX"
       },
       "execution_count": null,
       "outputs": []
